# generative-ai-marketing-portal

./: .gitignore  README.md  app.py  cdk.json  config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  resize.sh
assets/demo-data/: df_item_banking.csv  df_item_deduplicated.csv  products.json
assets/lambda/bedrock_content_generation_lambda/: bedrock_content_generation_lambda.py
assets/lambda/bedrock_content_generation_lambda/model_configs/: ai21.j2-jumbo-instruct.json  anthropic.claude-3-haiku-20240307-v1:0.json  anthropic.claude-instant-v1.json
assets/lambda/genai_personalize_batch_segment_job/: personalize_batch_segment_job.py
assets/lambda/genai_personalize_batch_segment_jobs/: personalize_batch_segment_jobs.py
assets/lambda/genai_pinpoint_job/: pinpoint_job.py
assets/lambda/genai_pinpoint_message/: pinpoint_message.py
assets/lambda/genai_pinpoint_segment/: pinpoint_segment.py
assets/lambda/genai_s3/: s3_fetch.py
assets/layers/langchain/: requirements.txt
assets/layers/utilities/python/: aws_helper.py
assets/streamlit/: Dockerfile  build_docker.sh  pyproject.toml
assets/streamlit/.streamlit/: pages.toml
assets/streamlit/src/: Home.py
assets/streamlit/src/app_pages/: 00_Prompt_Iterator.py  01_Pinpoint_Segment.py  02_Personalize_Segment.py  03_Content_Generator.py
assets/streamlit/src/components/: authenticate.py  genai_api.py  model_specs.json  personalize_api.py  pinpoint_api.py  utils.py  utils_models.py
infra/: cdsgenai_stack.py
infra/constructs/: cdsai_api.py  cdsai_endpoint.py  cdsai_personalize.py  cdsai_pinpoint.py
infra/constructs/llm_endpoints/: constants.py  iam.py  utils.py
infra/constructs/llm_endpoints/config_factory/: __init__.py  base.py  jumpstart.py  marketplace.py  tgi.py
infra/stacks/: streamlit.py
samples/roles/cross_account_bedrock/: policy_document.json  trust_relationships.json
