[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CDS GenAI"
version = "0.1.0"
description = "Advanced Marketer Portal powered by Generative AI"
authors = [
    "Tristan Nguyen <nnatri@amazon.com>",
    "Philipp Kaindl <philikai@amazon.de>",
]

[tool.poetry.dependencies]
python = "~3.9.0"
aws-cdk-lib = "~2.70.0"
constructs = "^10.0.0"
boto3 = "~1.27.0"
pyyaml = "^6.0.0"
sagemaker = "^2.169.0"
aws-cdk-aws-apigatewayv2-alpha = "^2.0"
aws-cdk-aws-apigatewayv2-integrations-alpha = "^2.0.0"
aws-cdk-aws-apigatewayv2-authorizers-alpha = "^2.0.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.282"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[tool.ruff]
select = ["E", "F", "C", "W", "R", "B", "Q"]
line-length = 120
target-version="py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.black]
target-version = ['py39']
line-length = 120